configure_file( ODBAPIVersionSHA1.cc.in ODBAPIVersionSHA1.cc @ONLY )

list( APPEND odblib_src_files
	pyodbapi.h
ODBAPIVersionSHA1.cc
StringTool.cc
StringTool.h
Array.h
BitColumnExpression.cc
BitColumnExpression.h
ShiftedBitColumnExpression.cc
ShiftedBitColumnExpression.h
Codec.cc
Codec.h
CodecFactory.h
CodecFactory.cc
CodecOptimizer.cc
CodecOptimizer.h
Column.cc
Column.h
ColumnExpression.cc
ColumnExpression.h
ShiftedColumnExpression.cc
ShiftedColumnExpression.h
ColumnType.h
CommandLineParser.cc
CommandLineParser.h
Comparator.cc
Comparator.h
ConstantExpression.cc
ConstantExpression.h
ConstantSetter.cc
ConstantSetter.h
DataColumn.cc
DataColumn.h
DataColumns.cc
DataColumns.h
DataField.cc
DataField.h
DataJoin.cc
DataJoin.h
DataJoinIterator.cc
DataJoinIterator.h
DataLink.cc
DataLink.h
DataLinkFiller.cc
DataLinkFiller.h
DataLinkIterator.cc
DataLinkIterator.h
DataLinks.cc
DataLinks.h
DataLoader.cc
DataLoader.h
DataPage.cc
DataPage.h
DataRecord.cc
DataRecord.h
DataRecordIterator.h
DataRow.cc
DataRow.h
DataSaver.cc
DataSaver.h
DataSelect.cc
DataSelect.h
DataSelectIterator.cc
DataSelectIterator.h
DataSelectOutput.cc
DataSelectOutput.h
DataSelectSession.cc
DataSelectSession.h
DataSet.cc
DataSet.h
DataSetBuilder.cc
DataSetBuilder.h
DataSetFiller.cc
DataSetFiller.h
DataStream.cc
DataStream.h
DataTable.cc
DataTable.h
DataTableFiller.cc
DataTableFiller.h
DataTableIterator.cc
DataTableIterator.h
DataTableMappings.cc
DataTableMappings.h
DataTables.cc
DataTables.h
DataView.cc
DataView.h
DateTime.cc
DateTime.h
Decoder.cc
Decoder.h
Dictionary.cc
Dictionary.h
DispatchingWriter.cc
DispatchingWriter.h
DirectAccess.cc
DirectAccess.h
DirectAccessIterator.cc
DirectAccessIterator.h
Duration.cc
Duration.h
Endian.h
Environment.cc
Environment.h
EqRegionCache.cc
EqRegionCache.h
Expressions.cc
Expressions.h
FastODA2Request.cc
FastODA2Request.h
FixedSizeWriterIterator.cc
FixedSizeWriterIterator.h
FunctionAND.cc
FunctionAND.h
FunctionAVG.cc
FunctionAVG.h
FunctionCOUNT.cc
FunctionCOUNT.h
FunctionDOTP.cc
FunctionDOTP.h
FunctionEQ.cc
FunctionEQ.h
FunctionRLIKE.cc
FunctionRLIKE.h
FunctionEQ_BOXLAT.cc
FunctionEQ_BOXLAT.h
FunctionEQ_BOXLON.cc
FunctionEQ_BOXLON.h
FunctionExpression.cc
FunctionExpression.h
FunctionFactory.cc
FunctionFactory.h
MDI.cc
MDI.h
FunctionIN.cc
FunctionIN.h
FunctionIntegerExpression.cc
FunctionIntegerExpression.h
FunctionJOIN.cc
FunctionJOIN.h
FunctionJULIAN.cc
FunctionJULIAN.h
FunctionJULIAN_SECONDS.cc
FunctionJULIAN_SECONDS.h
FunctionMAX.cc
FunctionMAX.h
FunctionMIN.cc
FunctionMIN.h
FunctionNORM.cc
FunctionNORM.h
FunctionNOT_IN.cc
FunctionNOT_IN.h
FunctionNOT_NULL.cc
FunctionNOT_NULL.h
FunctionNULL.cc
FunctionNULL.h
FunctionNVL.cc
FunctionNVL.h
FunctionOR.cc
FunctionOR.h
FunctionRGG_BOXLAT.cc
FunctionRGG_BOXLAT.h
FunctionRGG_BOXLON.cc
FunctionRGG_BOXLON.h
FunctionRMS.cc
FunctionRMS.h
FunctionROWNUMBER.cc
FunctionROWNUMBER.h
FunctionSTDEV.cc
FunctionSTDEV.h
FunctionSUM.cc
FunctionSUM.h
FunctionTDIFF.cc
FunctionTDIFF.h
FunctionTHIN.cc
FunctionTHIN.h
FunctionTIMESTAMP.cc
FunctionTIMESTAMP.h
FunctionVAR.cc
FunctionVAR.h
GribCodes.cc
GribCodes.h
HashTable.cc
HashTable.h
Header.cc
Header.h
InMemoryDataHandle.cc
InMemoryDataHandle.h
IteratorProxy.h
MD5.cc
MD5.h
MDSetter.cc
MDSetter.h
MDUpdatingIterator.cc
MDUpdatingIterator.h
MemoryBlock.cc
MemoryBlock.h
MetaData.cc
MetaData.h
MetaDataReader.cc
MetaDataReader.h
MetaDataReaderIterator.cc
MetaDataReaderIterator.h
NumberExpression.cc
NumberExpression.h
ODAColumn.cc
ODAColumn.h
NullColumn.cc
NullColumn.h
ODADatabase.cc
ODADatabase.h
ODAHandle.cc
ODAHandle.h
ODATranslator.h
ODAUpdatingIterator.cc
ODAUpdatingIterator.h
ODBAPISettings.cc
ODBAPISettings.h
ODBAPIVersion.cc
ODBAPIVersion.h
ODBApplication.cc
ODBApplication.h
ODBBehavior.cc
ODBBehavior.h
Select.cc
Select.h
OrderByExpressions.cc
OrderByExpressions.h
ParameterExpression.cc
ParameterExpression.h
Reader.cc
Reader.h
ReaderIterator.cc
ReaderIterator.h
RegionCache.cc
RegionCache.h
RggRegionCache.cc
RggRegionCache.h
RowsIterator.h
SQLAST.cc
SQLAST.h
SQLBit.cc
SQLBit.h
SQLBitColumn.cc
SQLBitColumn.h
SQLBitfield.cc
SQLBitfield.h
SQLColumn.cc
SQLColumn.h
SQLCountStar.cc
SQLCountStar.h
SQLCreateTable.cc
SQLCreateTable.h
SQLDataColumn.cc
SQLDataColumn.h
SQLDataSet.cc
SQLDataSet.h
SQLDataTable.cc
SQLDataTable.h
SQLDataTableIterator.cc
SQLDataTableIterator.h
SQLDatabase.cc
SQLDatabase.h
SQLDistinctOutput.cc
SQLDistinctOutput.h
SQLDouble.cc
SQLDouble.h
SQLExpression.cc
SQLExpression.h
SQLExpressionEvaluated.cc
SQLExpressionEvaluated.h
SQLIndex.cc
SQLIndex.h
SQLInt.cc
SQLInt.h
SQLInteractiveSession.cc
SQLInteractiveSession.h
SQLCallbackSession.cc
SQLCallbackSession.h
SQLIterator.h
SQLIteratorOutput.cc
SQLIteratorOutput.h
SQLIteratorSession.cc
SQLIteratorSession.h
SQLODAOutput.cc
SQLODAOutput.h
SQLOrderOutput.cc
SQLOrderOutput.h
SQLOutput.cc
SQLOutput.h
SQLOutputConfig.cc
SQLOutputConfig.h
SQLParser.cc
SQLParser.h
SQLReal.cc
SQLReal.h
SQLSelect.cc
SQLSelect.h
SQLSelectFactory.cc
SQLSelectFactory.h
SQLSession.cc
SQLSession.h
SQLSimpleOutput.cc
SQLSimpleOutput.h
SQLStatement.cc
SQLStatement.h
SQLString.cc
SQLString.h
SQLTable.cc
SQLTable.h
SQLType.cc
SQLType.h
SchemaAnalyzer.cc
SchemaAnalyzer.h
SelectIterator.cc
SelectIterator.h
SelectOneTable.cc
SelectOneTable.h
SimpleFilter.cc
SimpleFilter.h
SimpleFilterIterator.cc
SimpleFilterIterator.h
Stack.cc
Stack.h
StringExpression.cc
StringExpression.h
TODATable.cc
TODATable.h
TODATableIterator.cc
TODATableIterator.h
TReadOnlyMemoryDataHandle.cc
TReadOnlyMemoryDataHandle.h
TemplateParameters.cc
TemplateParameters.h
TextReader.cc
TextReader.h
TextReaderIterator.cc
TextReaderIterator.h
Tracer.cc
Tracer.h
Types.h
UnsafeInMemoryDataHandle.h
VariableExpression.cc
VariableExpression.h
Writer.cc
Writer.h
WriterBufferingIterator.cc
WriterBufferingIterator.h
WriterDispatchingIterator.cc
WriterDispatchingIterator.h
MapReduce.cc
MapReduce.h
VariablesTable.cc
VariablesTable.h
md5_hash.h
md5_hash.c
odb_api.h
odbcapi.cc
odbcapi.h
piconst.h
ODBFormatBuffer.cc
ODBFormatBuffer.h
)

# templates

list( APPEND odblib_templates
ConstantSetter.cc
DataStream.cc
FastODA2Request.cc
Header.cc
ODAUpdatingIterator.cc
SQLIteratorOutput.cc
SQLIteratorSession.cc
SimpleFilter.cc
SimpleFilterIterator.cc
TODATable.cc
TODATableIterator.cc
WriterDispatchingIterator.cc
MDUpdatingIterator.cc
MetaDataReader.cc
ShiftedColumnExpression.cc
)

# define Odb library

ecbuild_add_library( TARGET     Odb
                     INSTALL_HEADERS LISTED
                     HEADER_DESTINATION ${INSTALL_INCLUDE_DIR}/odb_api
                     COMPONENT  server
                     SOURCES    ${odblib_src_files}
                     GENERATED  ODBAPIVersionSHA1.cc
                     TEMPLATES  ${odblib_templates}
                     LIBS       eckit )

ecbuild_generate_yy( YYPREFIX odblib_
                  YACC sqly
                  LEX  sqll
                  DEPENDANT SQLParser.cc )

###############################################################################

add_subdirectory( tools )

add_subdirectory( migrator )
