list( APPEND odblib_src_files
Array.h
BitColumnExpression.cc
BitColumnExpression.h
ShiftedBitColumnExpression.cc
ShiftedBitColumnExpression.h
Codec.cc
Codec.h
CodecFactory.h
CodecOptimizer.cc
CodecOptimizer.h
Column.cc
Column.h
ColumnExpression.cc
ColumnExpression.h
ShiftedColumnExpression.cc
ShiftedColumnExpression.h
ColumnType.h
CommandLineParser.cc
CommandLineParser.h
CompactTool.cc
CompactTool.h
Comparator.cc
Comparator.h
CompareTool.cc
CompareTool.h
ConstantExpression.cc
ConstantExpression.h
ConstantSetter.cc
ConstantSetter.h
CountTool.cc
CountTool.h
DataColumn.cc
DataColumn.h
DataColumns.cc
DataColumns.h
DataField.cc
DataField.h
DataJoin.cc
DataJoin.h
DataJoinIterator.cc
DataJoinIterator.h
DataLink.cc
DataLink.h
DataLinkFiller.cc
DataLinkFiller.h
DataLinkIterator.cc
DataLinkIterator.h
DataLinks.cc
DataLinks.h
DataLoader.cc
DataLoader.h
DataPage.cc
DataPage.h
DataRecord.cc
DataRecord.h
DataRecordIterator.h
DataRow.cc
DataRow.h
DataSaver.cc
DataSaver.h
DataSelect.cc
DataSelect.h
DataSelectIterator.cc
DataSelectIterator.h
DataSelectOutput.cc
DataSelectOutput.h
DataSelectSession.cc
DataSelectSession.h
DataSet.cc
DataSet.h
DataSetBuilder.cc
DataSetBuilder.h
DataSetFiller.cc
DataSetFiller.h
DataStream.cc
DataStream.h
DataTable.cc
DataTable.h
DataTableFiller.cc
DataTableFiller.h
DataTableIterator.cc
DataTableIterator.h
DataTableMappings.cc
DataTableMappings.h
DataTables.cc
DataTables.h
DataView.cc
DataView.h
DateTime.cc
DateTime.h
Decoder.cc
Decoder.h
Dictionary.cc
Dictionary.h
DispatchingWriter.cc
DispatchingWriter.h
Duration.cc
Duration.h
Endian.h
Environment.cc
Environment.h
EqRegionCache.cc
EqRegionCache.h
Expressions.cc
Expressions.h
FastODA2Request.cc
FastODA2Request.h
FixedSizeRowTool.cc
FixedSizeRowTool.h
FixedSizeWriterIterator.cc
FixedSizeWriterIterator.h
FunctionAND.cc
FunctionAND.h
FunctionAVG.cc
FunctionAVG.h
FunctionCOUNT.cc
FunctionCOUNT.h
FunctionDOTP.cc
FunctionDOTP.h
FunctionEQ.cc
FunctionEQ.h
FunctionEQ_BOXLAT.cc
FunctionEQ_BOXLAT.h
FunctionEQ_BOXLON.cc
FunctionEQ_BOXLON.h
FunctionExpression.cc
FunctionExpression.h
FunctionFactory.cc
FunctionFactory.h
FunctionIN.cc
FunctionIN.h
FunctionIntegerExpression.cc
FunctionIntegerExpression.h
FunctionJOIN.cc
FunctionJOIN.h
FunctionJULIAN.cc
FunctionJULIAN.h
FunctionMAX.cc
FunctionMAX.h
FunctionMIN.cc
FunctionMIN.h
FunctionNORM.cc
FunctionNORM.h
FunctionNOT_IN.cc
FunctionNOT_IN.h
FunctionNOT_NULL.cc
FunctionNOT_NULL.h
FunctionNULL.cc
FunctionNULL.h
FunctionNVL.cc
FunctionNVL.h
FunctionOR.cc
FunctionOR.h
FunctionRGG_BOXLAT.cc
FunctionRGG_BOXLAT.h
FunctionRGG_BOXLON.cc
FunctionRGG_BOXLON.h
FunctionRMS.cc
FunctionRMS.h
FunctionROWNUMBER.cc
FunctionROWNUMBER.h
FunctionSTDEV.cc
FunctionSTDEV.h
FunctionSUM.cc
FunctionSUM.h
FunctionTDIFF.cc
FunctionTDIFF.h
FunctionTHIN.cc
FunctionTHIN.h
FunctionTIMESTAMP.cc
FunctionTIMESTAMP.h
FunctionVAR.cc
FunctionVAR.h
GribCodes.cc
GribCodes.h
HashTable.cc
HashTable.h
Header.cc
Header.h
ImportTool.cc
ImportTool.h
InMemoryDataHandle.cc
InMemoryDataHandle.h
IteratorProxy.h
LSTool.cc
LSTool.h
MD5.cc
MD5.h
MDSetTool.cc
MDSetTool.h
MDSetter.cc
MDSetter.h
MDUpdatingIterator.cc
MDUpdatingIterator.h
MemoryBlock.cc
MemoryBlock.h
MergeTool.cc
MergeTool.h
MetaData.cc
MetaData.h
MetaDataReader.cc
MetaDataReader.h
MetaDataReaderIterator.cc
MetaDataReaderIterator.h
NumberExpression.cc
NumberExpression.h
ODA2RequestTool.cc
ODA2RequestTool.h
ODAColumn.cc
ODAColumn.h
ODADatabase.cc
ODADatabase.h
ODAHandle.cc
ODAHandle.h
ODAHeaderTool.cc
ODAHeaderTool.h
ODATranslator.h
ODAUpdatingIterator.cc
ODAUpdatingIterator.h
ODBAPISettings.cc
ODBAPISettings.h
ODBAPIVersion.cc
ODBAPIVersion.h
ODBApplication.cc
ODBApplication.h
ODBBehavior.cc
ODBBehavior.h
ODBSelect.cc
ODBSelect.h
OrderByExpressions.cc
OrderByExpressions.h
ParameterExpression.cc
ParameterExpression.h
Reader.cc
Reader.h
ReaderIterator.cc
ReaderIterator.h
RegionCache.cc
RegionCache.h
RggRegionCache.cc
RggRegionCache.h
RowsIterator.h
SQLAST.h
SQLBit.cc
SQLBit.h
SQLBitColumn.cc
SQLBitColumn.h
SQLBitfield.cc
SQLBitfield.h
SQLColumn.cc
SQLColumn.h
SQLCountStar.cc
SQLCountStar.h
SQLCreateTable.cc
SQLCreateTable.h
SQLDataColumn.cc
SQLDataColumn.h
SQLDataSet.cc
SQLDataSet.h
SQLDataTable.cc
SQLDataTable.h
SQLDataTableIterator.cc
SQLDataTableIterator.h
SQLDatabase.cc
SQLDatabase.h
SQLDistinctOutput.cc
SQLDistinctOutput.h
SQLDouble.cc
SQLDouble.h
SQLExpression.cc
SQLExpression.h
SQLExpressionEvaluated.cc
SQLExpressionEvaluated.h
SQLIndex.cc
SQLIndex.h
SQLInt.cc
SQLInt.h
SQLInteractiveSession.cc
SQLInteractiveSession.h
SQLIterator.h
SQLIteratorOutput.cc
SQLIteratorOutput.h
SQLIteratorSession.cc
SQLIteratorSession.h
SQLODAOutput.cc
SQLODAOutput.h
SQLOrderOutput.cc
SQLOrderOutput.h
SQLOutput.cc
SQLOutput.h
SQLOutputConfig.cc
SQLOutputConfig.h
SQLParser.cc
SQLParser.h
SQLReal.cc
SQLReal.h
SQLSelect.cc
SQLSelect.h
SQLSelectFactory.cc
SQLSelectFactory.h
SQLSession.cc
SQLSession.h
SQLSimpleOutput.cc
SQLSimpleOutput.h
SQLStatement.cc
SQLStatement.h
SQLString.cc
SQLString.h
SQLTable.cc
SQLTable.h
SQLTool.cc
SQLTool.h
SQLType.cc
SQLType.h
SchemaAnalyzer.cc
SchemaAnalyzer.h
SelectIterator.cc
SelectIterator.h
SelectOneTable.cc
SelectOneTable.h
SetTool.cc
SetTool.h
SimpleFilter.cc
SimpleFilter.h
SimpleFilterIterator.cc
SimpleFilterIterator.h
SplitTool.cc
SplitTool.h
Stack.cc
Stack.h
StringExpression.cc
StringExpression.h
StringTool.cc
StringTool.h
TODATable.cc
TODATable.h
TODATableIterator.cc
TODATableIterator.h
TReadOnlyMemoryDataHandle.cc
TReadOnlyMemoryDataHandle.h
TemplateParameters.cc
TemplateParameters.h
TemporaryFile.cc
TemporaryFile.h
TestCase.cc
TestCase.h
TestRunner.cc
TestRunner.h
TestRunnerApplication.cc
TestRunnerApplication.h
TextReader.cc
TextReader.h
TextReaderIterator.cc
TextReaderIterator.h
Tool.cc
Tool.h
ToolFactory.cc
ToolFactory.h
ToolRunnerApplication.cc
ToolRunnerApplication.h
Tracer.cc
Tracer.h
Types.h
UnsafeInMemoryDataHandle.h
VariableExpression.cc
VariableExpression.h
Writer.cc
Writer.h
WriterBufferingIterator.cc
WriterBufferingIterator.h
WriterDispatchingIterator.cc
WriterDispatchingIterator.h
MapReduce.cc
MapReduce.h
XYVTool.cc
XYVTool.h
VariablesTable.cc
VariablesTable.h
md5_hash.h
md5_hash.c
odb_api.h
odbcapi.cc
odbcapi.h
piconst.h
)

# templates

list( APPEND odblib_templates
ConstantSetter.cc
DataStream.cc
FastODA2Request.cc
Header.cc
ODAUpdatingIterator.cc
SQLIteratorOutput.cc
SQLIteratorSession.cc
SimpleFilter.cc
SimpleFilterIterator.cc
TODATable.cc
TODATableIterator.cc
WriterDispatchingIterator.cc
MDUpdatingIterator.cc
MetaDataReader.cc
ShiftedColumnExpression.cc
)

# define Odb library

ecbuild_add_library( TARGET     Odb
                     INSTALL_HEADERS LISTED
                     COMPONENT  server
                     SOURCES    ${odblib_src_files}
                     TEMPLATES  ${odblib_templates}
                     LIBS       Ec )

ecbuild_generate_yy( YYPREFIX odblib_
                  YACC sqly
                  LEX  sqll
                  DEPENDANT SQLParser.cc )

###############################################################################
# swig python interface

if( ODB_API_PYTHON AND SWIG_FOUND AND PYTHONLIBS_FOUND )

    set(CMAKE_SWIG_FLAGS "")

    include_directories( ${PYTHON_INCLUDE_PATH} )

    set_source_files_properties( pyodbapi.i PROPERTIES CPLUSPLUS ON )
#    set_source_files_properties( pyodbapi.i PROPERTIES SWIG_FLAGS "-includeall")

    swig_add_module( pyodbapi python pyodbapi.i )

    swig_link_libraries( pyodbapi Odb ${PYTHON_LIBRARIES} )

    set(PYTHON_DEST "lib/python${PYTHON_VERSION}/site-packages" )
    install(TARGETS _pyodbapi DESTINATION ${PYTHON_DEST} )
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/pyodbapi.py  DESTINATION ${PYTHON_DEST})

endif()
